--- a/index.html
+++ b/index.html
@@ -11,37 +11,41 @@
     <script src="./index.js" async></script>
 </head>
 
-<body class="container">
+<body>
+    <div class="container">
     <header>
-        <h1>Psalm Of The Day</h1>
-        <p>Welcome to Psalm.me. Here you can find the psalm of the day</p>
+        <h1>Psalm.me</h1>
+        <p>Psalm of the day</p>
     </header>
 
     <div class="instructions">
-        <p>Listed are 5 psalms. You will be able to read through the first few lines of them. Pick one that stands out
-            to you and select it. You can then pray through the psalm of the day.</p>
+        <p>There are five Psalms listed. Skim through the first few lines of them to see which one speaks to you today. You can then pray through the Psalm and be encouraged by the Word.</p>
     </div>
     <div class="psalm">
-    <H2>Psalms <span class="one"></span></h2>
-    <div class="one-of-five"></div>
-</div><div class="psalm">
-    <h2>Psalm <span class="two"></span></h2>
-    <div class="two-of-five"></div>
-</div><div class="psalm">
-    <h2>Psalm <span class="three"></span></h2>
-    <div class="three-of-five"></div>
-</div><div class="psalm">
-    <h2>Psalm <span class="four"></span></h2>
-    <div class="four-of-five"></div>
-</div><div class="psalm">
-    <h2>Psalm <span class="five"></span></h2>
-    <div class="five-of-five"></div>
-</div>
+        <H2>Psalms <span class="one"></span></h2>
+        <div class="one-of-five"></div>
+    </div>
+    <div class="psalm">
+        <h2>Psalm <span class="two"></span></h2>
+        <div class="two-of-five"></div>
+    </div>
+    <div class="psalm">
+        <h2>Psalm <span class="three"></span></h2>
+        <div class="three-of-five"></div>
+    </div>
+    <div class="psalm">
+        <h2>Psalm <span class="four"></span></h2>
+        <div class="four-of-five"></div>
+    </div>
+    <div class="psalm">
+        <h2>Psalm <span class="five"></span></h2>
+        <div class="five-of-five"></div>
+    </div>
 
     <footer>
         <br>Copyright Brooks Vinyard 2019
     </footer>
-
+</div>
 </body>
 
 </html>
