--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./index.css">
     <script src="./index.js" async></script>
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <p>There are five Psalms listed. Skim through the first few lines of them to see which one speaks to you today. You can then pray through the Psalm and be encouraged by the Word.</p>
     </div>
     <div class="psalm">
-        <H2>Psalms <span class="one"></span></h2>
+        <H2>Psalm <span class="one"></span></h2>
         <div class="one-of-five"></div>
     </div>
     <div class="psalm">
@@ -43,7 +44,7 @@
     </div>
 
     <footer>
-        <br>Copyright Brooks Vinyard 2019
+        <br>Copyright 2019
     </footer>
 </div>
 </body>
