--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./index.css">
     <script src="./index.js" async></script>
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:700|Open+Sans" rel="stylesheet">
 </head>
 
 <body>
