refactor(*) general improvements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Psalm of The Day</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./index.css">
+    
+    <script src="./psalms.js"></script>
     <script src="./index.js" async></script>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700|Open+Sans" rel="stylesheet">
 </head>
@@ -22,26 +24,8 @@
     <div class="instructions">
         <p>There are five Psalms listed. Skim through the first few lines of them to see which one speaks to you today. You can then pray through the Psalm and be encouraged by the Word.</p>
     </div>
-    <div class="psalm">
-        <H2>Psalm <span class="one"></span></h2>
-        <div class="one-of-five"></div>
-    </div>
-    <div class="psalm">
-        <h2>Psalm <span class="two"></span></h2>
-        <div class="two-of-five"></div>
-    </div>
-    <div class="psalm">
-        <h2>Psalm <span class="three"></span></h2>
-        <div class="three-of-five"></div>
-    </div>
-    <div class="psalm">
-        <h2>Psalm <span class="four"></span></h2>
-        <div class="four-of-five"></div>
-    </div>
-    <div class="psalm">
-        <h2>Psalm <span class="five"></span></h2>
-        <div class="five-of-five"></div>
-    </div>
+
+    <div id="psalms"></div>
 
     <footer>
         <br>Copyright 2019
