--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Psalm of The Day</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+    <!-- Search Engine -->
+    <meta name="description" content="Psalm of the day">
+    <meta name="image" content="https://psalm.me/opengraph.png">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Psalm.me">
+    <meta itemprop="description" content="Psalm of the day">
+    <meta itemprop="image" content="https://psalm.me/opengraph.png">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Psalm.me">
+    <meta name="og:description" content="Psalm of the day">
+    <meta name="og:image" content="https://psalm.me/opengraph.svg">
+    <meta name="og:url" content="https://psalm.me">
+    <meta name="og:site_name" content="Psalm.me">
+    <meta name="og:type" content="website">
+
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -24,7 +41,7 @@
     <script src="./psalms.js"></script>
     <script src="./index.js" async></script>
     <script src="./menu.js" async></script>
-    <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700|Open+Sans" rel="stylesheet">
 </head>
 
