--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137508245-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-137508245-1');
+    </script>
+    
     <meta charset="utf-8">
 
     <title>Psalm of The Day</title>
@@ -34,6 +44,7 @@
     <meta name="application-name" content="Psalm.me">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#b8faf7">
+
 
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./menu.css">
