--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
     <div id="esv" ></div>
     <div id="kjv" class="translation-off"></div>
     <footer>
-        <br>Copyright 2020
+        <br>
+        <a href="https://brooksvinyard.com" style="
+            text-decoration: none;
+            color: #ffffff;
+        ">© Brooks Vinyard</a>
     </footer>
 </div>
 </div>
